--- a/Ansible/install-elk.yml
+++ b/Ansible/install-elk.yml
@@ -1,7 +1,7 @@
 ---
 - name: Configure Elk VM with Docker
   hosts: elk
-  remote_user: azadmin
+  remote_user: ansible
   become: true
   tasks:
     # Use apt module
